[KL-515] fix img preview / media asset z-index

--- a/src/app/media-asset/media-asset.component.scss
+++ b/src/app/media-asset/media-asset.component.scss
@@ -80,7 +80,7 @@
   bottom: 0;
   background: rgba(0, 0, 0, 0.35);
   animation: fadeIn 0.2s ease;
-  z-index: 1;
+  z-index: 3;
 }
 
 .details {
@@ -95,7 +95,7 @@
   background: #fff;
   box-shadow: 0 0 12px 2px rgba(0, 0, 0, 0.35);
   animation: popupSlideIn 0.2s $cubicBezier;
-  z-index: 2;
+  z-index: 4;
 
   &__header {
     display: flex;
